Bugfix for "Cannot delete comment #2051" Bugfix for AlbumArtist which was lost after some update property