@@ -35,8 +35,8 @@ public class DummyMPlayerImpl {
   public static void main(final String[] args) throws InterruptedException {
     System.out.println("TestMPlayerPlayerImpl was called!");
     // simulate normal reply by MPlayer to commands that are sent in
-    System.out.println("ANS_LENGTH=" + new Float(LENGTH).toString());
-    System.out.println("ANS_TIME_POSITION=" + new Float(POSITION).toString());
+    System.out.println("ANS_LENGTH=" + Float.valueOf(LENGTH).toString());
+    System.out.println("ANS_TIME_POSITION=" + Float.valueOf(POSITION).toString());
     Thread.sleep(5000);
     System.out.println("Exiting... (Quit)");
   }
